Issue #22: Updated NavFooter layout. Updated clippable layout for mobile browsers support.

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -194,6 +194,8 @@
     position: fixed;
     inset: 0;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
   }
 
   code,
